<resources>
    <string name="app_name">Placez</string>
    <string name="byUs">Von Albert Hildenberg und Mark Kastner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="locationWarning">Ohne Standort funktioniert diese App nicht. Bitte in den Einstellungen Standort zulassen.</string>
    <string name="storageWarning">Ohne auf den Speicher zugreifen zu können, können keine Einträge gespeichert werden.</string>
    <string name="currentPositionText">Deine Position</string>
    <string name="setLocationText">Bitte Standort aktivieren und erneut versuchen!</string>

    <string name="action_settings">Einstellungen</string>
    <string name="map">Karte</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_settings">Settings</string>

    <string name="setNameAndAddressError">Bitte Name und Adresse eintragen</string>
    <string name="setNameError">Bitte Name eintragen</string>
    <string name="setAddressError">Bitte Adresse eintragen</string>
    <string name="illegalAdress">Keine zugehörige Adressse gefunden!</string>
    <string name="addedPlace">Place hinzugefügt</string>
    <string name="editedPlace">Place bearbeitet</string>
    <string name="removedPlace">Place gelöscht</string>

    <string name="removeAllText">Alle Einträge löschen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="info">Placez Copyright by Albert Hilderberg, Mark Kastner \n\nEntstanden im Rahmen der Mobile Application Development
        Veranstaltung der HS Osnabrück</string>

    <string name="placeholderName">Place Name</string>
    <string name="placeholderDescription">Place Description</string>
    <string name="placez">Placez</string>
    <string name="name">Name</string>
    <string name="description">Beschreibung</string>
    <string name="address">Adresse</string>
    <string name="hintAddress">"Str. Nr, Plz Ort" oder "Lat,Lng" eingeben</string>
    <string name="category">Kategorie</string>
    <string name="picture">Bild</string>

    <string-array name="categories">
        <item>Place</item>
        <item>Bank</item>
        <item>Restaurant</item>
        <item>Parkplatz</item>
        <item>Freizeit</item>
        <item>Gegenstand</item>
    </string-array>


</resources>
