<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addPlace"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="Info" />


    </group>

</menu>
